--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
-<nav class="navbar">
-  <div class="container">
+<div class="row">
+  <nav class="navbar">
     <ul class="navbar-list">
       {% for item in site.data.navigation %}
         <li class="navbar-item">
@@ -12,5 +12,5 @@
         </li>
       {% endfor %}
     </ul>
-  </div>
-</nav>
+  </nav>
+</div>
