--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Rob Zed Games - {{ page.title }}</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
     <link rel="stylesheet" href="/assets/css/normalize.css">
     <link rel="stylesheet" href="/assets/css/skeleton.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        {% include navigation.html %}
-        {{ content }}
+      {% include navigation.html %}
+      {{ content }}
+      <div class="row footer">
+        <p>© Robert Ziehl, 2024</p>
       </div>
-    </div>
-    <div class="container footer">
-      <p>© Robert Ziehl, 2024</p>
     </div>
   </body>
 </html>
