--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -80,6 +80,13 @@
   color: #888;
 }
 
+.post-image {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto;
+}
+
 .footnotes {
   color: #888;
 }
